--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,11 +10,14 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
+    "@stomp/stompjs": "^7.0.0",
     "axios": "^1.7.4",
     "echarts": "^5.5.1",
     "element-plus": "^2.9.0",
+    "eventsource": "^3.0.5",
     "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^4.1.3",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.4.29",
     "vue-axios": "^3.5.2",
     "vue-echarts": "^7.0.3",
