--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   profiles:
-    include: alipay
+    include:
+    - alipay
+#    - mq
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/echo_scoring_system?useUnicode=true&characterEncoding=utf-8
