[1.6.2] 完善用户认证与记住我功能

--- a/backend/services/message-service/src/main/resources/application-email.yml
+++ b/backend/services/message-service/src/main/resources/application-email.yml
@@ -1,11 +1,11 @@
 spring:
   mail:
     host: smtp.163.com
-    username: ${SMTP_USERNAME}
-    password: ${SMTP_PASSWORD}
+    username: 17575010142@163.com
+    password: HNXW4LW7ScMycf9R
     port: 465
     properties:
-      from: ${SMTP_USERNAME}
+      from: 17575010142@163.com
       mail:
         smtp:
           socketFactory:
